tests/specs/ecosystem/kt3k/hello/0_0_3.test
kt3k/hello/0.0.3
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /main.ts:5:17
  | 
5 | export function add(a: number, b: number) {
  |                 ^^^ this function is missing an explicit return type
  = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


